# xbreach-worker

./: .clang-format  .dockerignore  .env.example  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.full.yml  docker-compose.yml  vcpkg.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  task.yml
.github/workflows/: ci.yml
migrations_clickhouse/: 0001_create_leak_records.sql  0002_unify_identifier.sql  0003_remove_hash_and_raw_columns.sql
src/: config.cpp  config.hpp  main.cpp  snowflake.cpp  snowflake.hpp  version.cpp  version.hpp
src/crypto/: hashing.cpp  hashing.hpp
src/db/: clickhouse_migrations.cpp  clickhouse_migrations.hpp  clickhouse_writer.cpp  clickhouse_writer.hpp  job_repository.cpp  job_repository.hpp
src/domain/: ingestion_job.hpp  leak_record.hpp  record_kind.hpp
src/io/: file_reader.cpp  file_reader.hpp
src/parse/: normalizer.cpp  normalizer.hpp  parser.cpp  parser.hpp
src/worker/: job_processor.cpp  job_processor.hpp  worker_loop.cpp  worker_loop.hpp
tests/: CMakeLists.txt  test_clickhouse_migrations.cpp  test_config.cpp  test_file_reader.cpp  test_hashing.cpp  test_job_processor.cpp  test_job_repository.cpp  test_normalizer.cpp  test_parser.cpp  test_smoke.cpp  test_snowflake.cpp  test_worker_loop.cpp
